local.log
[2026/02/22 11:26:26] error: uncaughtException: Invalid type: Expected ("development" | "production" | "test") but received "local"
ValiError: Invalid type: Expected ("development" | "production" | "test") but received "local"
    at Module.parse (file:///C:/Users/John-S/Documents/2023Dell/site8/server1/node_modules/valibot/dist/index.mjs:6748:28)
    at parseEnv (file:///C:/Users/John-S/Documents/2023Dell/site8/server1/dist/utils/env.js:11:14)
    at file:///C:/Users/John-S/Documents/2023Dell/site8/server1/dist/utils/env.js:20:20
    at ModuleJob.run (node:internal/modules/esm/module_job:377:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:689:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)
[2026/03/14 13:04:17] info: Service is listening on port 3005
[2026/03/14 13:04:17] error: Failed to start server: listen EADDRINUSE: address already in use :::3005 listen EADDRINUSE: address already in use :::3005
[2026/03/14 13:04:17] error: uncaughtException: Server startup failed: listen EADDRINUSE: address already in use :::3005
Error: Server startup failed: listen EADDRINUSE: address already in use :::3005
    at Server.<anonymous> (file:///C:/Users/John-S/Documents/2023Dell/site8/server/dist/server.js:122:11)
    at Server.emit (node:events:520:35)
    at emitErrorNT (node:net:1976:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21)
[2026/03/31 13:43:45] error: uncaughtException: The requested module '../../utils/ServiceFactory.js' does not provide an export named 'getArtistsService'
file:///C:/Users/jdumo/Documents/0Projects/site8/server/dist/features/artists/getArtistsItems.js:2
import { getArtistsService } from '../../utils/ServiceFactory.js';
         ^^^^^^^^^^^^^^^^^
SyntaxError: The requested module '../../utils/ServiceFactory.js' does not provide an export named 'getArtistsService'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async registerRoutes (file:///C:/Users/jdumo/Documents/0Projects/site8/server/dist/lib/RouterRegistry.js:18:30)
    at async file:///C:/Users/jdumo/Documents/0Projects/site8/server/dist/server.js:85:1
